--- a/src/main/asciidoc/start.adoc
+++ b/src/main/asciidoc/start.adoc
@@ -1,4 +1,4 @@
-= *Get the operation token*
+= *Get the operation token without form*
 
 == Request
 include::../../../target/generated-snippets/start/success/http-request.adoc[]
@@ -11,6 +11,20 @@ include::../../../target/generated-snippets/start/success/http-response.adoc[]
 
 == Response fields
 include::../../../target/generated-snippets/start/success/response-fields.adoc[]
+
+= *Get the operation token wit form*
+
+== Request
+include::../../../target/generated-snippets/start/success_with_form/http-request.adoc[]
+
+== Request headers
+include::../../../target/generated-snippets/start/success_with_form/request-headers.adoc[]
+
+== Response structure
+include::../../../target/generated-snippets/start/success_with_form/http-response.adoc[]
+
+== Response fields
+include::../../../target/generated-snippets/start/success_with_form/response-fields.adoc[]
 
 == Errors
 === No such the authentication header
@@ -78,6 +92,17 @@ include::../../../target/generated-snippets/start/errors/invalid_auth_token/resp
 include::../../../target/generated-snippets/start/errors/invalid_auth_token/response-fields.adoc[]
 ====
 
+=== Invalid query parameter 'form'
+
+====
+.Request
+include::../../../target/generated-snippets/start/errors/invalid_parameter_form/http-request.adoc[]
+.Response
+include::../../../target/generated-snippets/start/errors/invalid_parameter_form/http-response.adoc[]
+.Response headers
+include::../../../target/generated-snippets/start/errors/invalid_parameter_form/response-headers.adoc[]
+.Response fields
+include::../../../target/generated-snippets/start/errors/invalid_parameter_form/response-fields.adoc[]
 
 === Missing platform id
 
